<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.MainActivity"
    tools:showIn="@layout/activity_main">

    <ImageView
        android:layout_width="@dimen/main_logo_size"
        android:layout_height="@dimen/main_logo_size"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:src="@drawable/logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:text="@string/conference_name"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_header" />

    <EditText
        android:id="@+id/join_conf_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:hint="@string/conference_name"
        android:text="conference_name" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:text="@string/select_user"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_header" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_users"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/join_conf"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/default_padding"
            android:layout_marginRight="@dimen/default_padding"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/main_activity_button"
            android:enabled="false"
            android:text="@string/join"
            android:textColor="@color/white" />

        <Button
            android:layout_marginLeft="@dimen/default_padding"
            android:layout_marginRight="@dimen/default_padding"
            android:id="@+id/disconnect"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/main_activity_button"
            android:text="@string/disconnect"
            android:textColor="@color/white"
            android:visibility="gone" />

    </LinearLayout>

    <requestFocus />
</LinearLayout>
