<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:minHeight="?attr/actionBarSize"
            app:theme="@style/ThemeOverlay.AppCompat.ActionBar" />
    </android.support.design.widget.AppBarLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:padding="10dp"
        android:visibility="visible">

        <sdk.voxeet.com.toolkit.views.uitookit.sdk.VoxeetLoadingView
            android:id="@+id/loading_view"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:visibility="gone" />

        <sdk.voxeet.com.toolkit.views.uitookit.sdk.VoxeetTimer
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:visibility="gone" />

        <sdk.voxeet.com.toolkit.views.uitookit.sdk.VoxeetParticipantView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:visibility="gone" />

        <sdk.voxeet.com.toolkit.views.uitookit.sdk.VoxeetCurrentSpeakerView
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_gravity="top|center"
            android:visibility="gone" />

        <sdk.voxeet.com.toolkit.views.uitookit.sdk.VoxeetConferenceBarView
            android:id="@+id/conference_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="visible">

            <LinearLayout
                android:id="@+id/conference_options"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:visibility="gone">

                <Button
                    android:id="@+id/leaveConf"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_margin="1dp"
                    android:layout_weight="1"
                    android:background="@drawable/main_activity_button"
                    android:text="Leave"
                    android:textColor="@color/white"
                    android:visibility="visible" />

                <Button
                    android:id="@+id/record"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_margin="1dp"
                    android:layout_weight="1"
                    android:background="@drawable/main_activity_button"
                    android:text="Start Recording"
                    android:textColor="@color/white"
                    android:visibility="visible" />

                <Button
                    android:id="@+id/audio_routes"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_margin="1dp"
                    android:layout_weight="1"
                    android:background="@drawable/main_activity_button"
                    android:text="audio"
                    android:textColor="@android:color/white"
                    android:visibility="visible" />

                <Button
                    android:id="@+id/mute"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_margin="1dp"
                    android:layout_weight="1"
                    android:background="@drawable/main_activity_button"
                    android:text="mute"
                    android:textColor="@android:color/white"
                    android:visibility="visible" />

                <Button
                    android:id="@+id/toggle_video"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_margin="1dp"
                    android:layout_weight="1"
                    android:background="@drawable/main_activity_button"
                    android:text="toggle Video"
                    android:textColor="@android:color/white"
                    android:visibility="visible" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:orientation="vertical">

                <Button
                    android:id="@+id/start_presentation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/start_presentation" />

                <Button
                    android:id="@+id/stop_presentation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stop_presentation" />

                <ImageView
                    android:id="@+id/presentation_lander"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="100dp"
                    android:layout_height="100dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/previous_page"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/previous_page" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight="1" />

                    <Button
                        android:id="@+id/next_page"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/next_page" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/join_conf_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <ListView
                    android:id="@+id/recorded_conf_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:visibility="gone" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/conference_editext"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:hint="Conference id"
                        android:imeOptions="actionDone"
                        android:maxLines="1"
                        android:textColor="@color/colorPrimary"
                        android:textColorHint="@color/colorPrimary" />

                    <Button
                        android:id="@+id/join"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:background="@drawable/main_activity_button"
                        android:text="Join"
                        android:textColor="@android:color/white"
                        android:visibility="visible" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/conference_alias"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top|center"
                android:padding="10dp"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:textStyle="bold"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/text_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">

                <EditText
                    android:id="@+id/broadcast_editext"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:hint="Broadcast message"
                    android:imeOptions="actionDone"
                    android:maxLines="1"
                    android:textColor="@color/colorPrimary"
                    android:textColorHint="@color/colorPrimary" />

                <Button
                    android:id="@+id/send_broadcast"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/main_activity_button"
                    android:text="Send"
                    android:textColor="@color/white"
                    android:visibility="visible" />

            </LinearLayout>

            <ListView
                android:id="@+id/participants"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp" />

        </LinearLayout>

        <sdk.voxeet.com.toolkit.views.uitookit.nologic.VideoView
            android:id="@+id/screen_share"
            android:layout_width="@dimen/screen_preview_width"
            android:layout_height="@dimen/screen_preview_height"
            android:layout_gravity="bottom|left"
            android:padding="5dp"
            android:visibility="gone" />

        <sdk.voxeet.com.toolkit.views.uitookit.nologic.VideoView
            android:id="@+id/video_stream"
            android:layout_width="75dp"
            android:layout_height="60dp"
            android:layout_gravity="bottom|right"
            android:layout_marginRight="10dp"
            android:padding="1dp"
            android:visibility="gone" />

    </FrameLayout>
</LinearLayout>